# StudyAgent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CODING_AGENT_README.md  CohortMethod_HANDOFF.md  Dockerfile  HANDOFF.md  KEEPER-EXPANSION-PLAN.md  README.md  STRATEGUS_COHORT_METHODS_STATUS_KO.md  TEST-RUN.md  compose.yaml  dodo.py  environment.yml  pyproject.toml  test.md
acp_agent/: README.md
demo/: strategus-db-details.json  strategus-execution-settings.json
docs/: COHORT_METHODS_SPECIFICATIONS_RECOMMENDATION_DESIGN.md  COHORT_METHODS_SPECIFICATIONS_RECOMMENDATION_PLAN.md  COHORT_METHODS_WORKFLOW.md  INCIDENCE_WORKFLOW.md  KEEPER_INTERFACE_SPEC.md  PHENOTYPE_RECOMMENDATION_DESIGN.md  SERVICE_REGISTRY.yaml  STRATEGUS_COHORT_METHODS_SHELL.md  STRATEGUS_SHELL.md  TESTING.md
scripts/: calibrate_timeouts.py  test_strategus_incidence_plus_keeper.R
tests/: case_causal_review_flow_smoke_test.py  cohort_methods_specs_flow_smoke_test.py  phenotype_intent_split_smoke_test.py  phenotype_recommendation_advice_smoke_test.py  test_acp_cohort_methods_flow.py  test_acp_cohort_methods_route.py  test_acp_phenotype_flow.py  test_acp_server.py  test_case_causal_review_tools.py  test_cohort_methods_generated_scripts.py  test_cohort_methods_prompt_bundle.py  test_cohort_methods_spec_validation.py  test_cohort_methods_specs_models.py  test_core_tools.py  test_keeper_concept_sets_tools.py  test_keeper_interface_specs.py  test_keeper_profiles_tools.py  test_llm_client.py  test_logging_utils.py  test_mcp_prompt_bundle.py  test_mcp_tools_registry.py  test_net.py  (+2 more)
(+63 files in other folders)
