[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "study-agent"
version = "0.0.0"
description = "OHDSI Study Agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.0.0",
  "pydantic>=2.0.0",
  "PyYAML>=6.0",  
]

[project.scripts]
study-agent-mcp = "study_agent_mcp.server:main"
study-agent-acp = "study_agent_acp.server:main"
study-agent-demo-shell = "study_agent_acp.demo_shell:main"

[tool.setuptools]
packages = ["study_agent_core", "study_agent_mcp", "study_agent_acp"]

[tool.setuptools.package-dir]
study_agent_core = "core/study_agent_core"
study_agent_mcp = "mcp_server/study_agent_mcp"
study_agent_acp = "acp_agent/study_agent_acp"
